Fixed footer gap but nav-bar is in the middle

--- a/main.css
+++ b/main.css
@@ -25,6 +25,7 @@ body {
 
 #nav-bar {
     float: right;
+    width: 100%;
     margin-top: 15px;
 }
 
@@ -65,16 +66,13 @@ input[type="search"] {
 footer {
     position: absolute;
     width: 100%;
-    left: 0;
     bottom: 0;
+    left: 0;
     background-color: rgb(57, 57, 58);
-    margin-bottom: -10px;
-    padding: 0;
 }
 
-#footer-bar div {
-    margin: 0;
-    padding: 0;
+#footer-bar {
+    overflow: hidden;
 }
 
 #footer-bar #left-side-footer {
